--- a/src/styles/peak/base/links.scss
+++ b/src/styles/peak/base/links.scss
@@ -1,7 +1,7 @@
 a, button, .link {
-  display: inline-block;
-  color: $jade-500;
-  fill: $jade-500;
+  display: inline;
+  color: $primary-500;
+  fill: $primary-500;
   text-decoration: underline;
   font-weight: inherit;
   font-size: inherit;
@@ -30,23 +30,25 @@ a, button, .link {
   }
 
   &:visited {
-    color: $jade-500;
-    fill: $jade-500;
-    svg { border-color: $jade-500; }
+    color: $primary-500;
+    fill: $primary-500;
+    svg { border-color: $primary-500; }
   }
 
   &:hover, &:focus {
-    color: $jade-900;
-    fill: $jade-900;
-    svg { border-color: $jade-900; }
+    color: $primary-900;
+    fill: $primary-900;
+    svg { border-color: $primary-900; }
   }
 
   &:active, &.active {
-    color: $jade-700;
-    fill: $jade-700;
+    color: $primary-700;
+    fill: $primary-700;
     background: none;
-    svg { border-color: $jade-700; }
+    svg { border-color: $primary-700; }
   }
+
+
 
   @mixin variant($default, $active, $hover) {
     color: $default;
@@ -63,12 +65,12 @@ a, button, .link {
     }
   }
 
-  &.alt { @include variant($amethyst-500, $amethyst-300, $amethyst-700); }
-  &.alert { @include variant($amber-300, $amber-300, $amber-100); }
-  &.neg { @include variant($ruby-500, $ruby-500, $ruby-700); }
-  &.pos { @include variant($emerald-500, $emerald-500, $emerald-700); }
-  &.light { @include variant($pearl-0, $pearl-50, $pearl-100); }
-  &.dark { @include variant($pearl-900, $pearl-900, $pearl-700); }
+  &.alt { @include variant($secondary-500, $secondary-300, $secondary-700); }
+  &.alert { @include variant($tertiary-300, $tertiary-300, $tertiary-100); }
+  &.neg { @include variant($neg-500, $neg-500, $neg-700); }
+  &.pos { @include variant($pos-500, $pos-500, $pos-700); }
+  &.light { @include variant($neutral-0, $primary-100, $primary-300); }
+  &.dark { @include variant($neutral-900, $primary-700, $primary-500); }
   &.small { font-size: 0.875rem; }
 
   &.large {
