--- a/src/styles/peak/base/typography.scss
+++ b/src/styles/peak/base/typography.scss
@@ -12,7 +12,7 @@ textarea {
   line-height: 1.375rem;
   margin: 0;
   padding: 0;
-  color: $pearl-900;
+  color: $neutral-900;
 
   // -- font smooving
   -webkit-font-smoothing: antialiased;
@@ -72,22 +72,23 @@ p.large {
   margin: 0 0 1.125rem;
 }
 
-small, p.small, {
+small, p.small {
   font-size: 0.875rem;
 }
 
 sup {
   font-size: 0.5em;
   line-height: 0.5em;
+  vertical-align: super;
 }
 
 strong, b, .strong { font-weight: bold; }
 em, i, var, .em { font-style: normal; }
-var { font-style: normal; }
-del { color: $ruby-500; }
+del, .neg { color: $ruby-500; }
+.pos { color: $primary-500; }
 
 .tab-numbers { font-feature-settings: "kern", "liga", "tnum", "ss02", "ss04"; }
-.subtle { color: rgba($pearl-900, 0.77); }
+.subtle { color: rgba($neutral-900, 0.77); }
 .capitalize { text-transform: capitalize; }
 .uppercase { text-transform: uppercase; }
 .center { text-align: center; }
@@ -96,7 +97,7 @@ hr {
   box-sizing: content-box;
   height: 1px;
   margin: 1rem 0;
-  background-color: $pearl-100;
+  background-color: $neutral-100;
   border: none;
   overflow: visible;
 }
@@ -104,6 +105,7 @@ hr {
 ul, ol {
   padding: 0;
   margin: 0 0 1rem;
+  list-style: none;
 }
 
 li {
@@ -115,6 +117,7 @@ code {
   font-family: 'Fira Mono', monospace;
   font-size: 0.875rem;
 }
+.no-margin { margin: 0; }
 
 /* -------- SMALL SCREEN MEDIA QUERIES ------- */
 
@@ -156,4 +159,13 @@ code {
     line-height: 1.5rem;
     margin: 1.5rem 0 1rem;
   }
+
+  .no-margin { margin: 0; }
 }
+
+/* -- Localization --*/
+html[lang="fr-ca"] .english-only { display: none; }
+html[lang="fr-ca"] .en-image { display: none !important; }
+
+html[lang="en"] .french-only { display: none; }
+html[lang="en"] .fr-image { display: none !important; }
