cleanup state specific styling

--- a/src/styles/states.scss
+++ b/src/styles/states.scss
@@ -1,123 +1,17 @@
-// Override all header styling found in typography
+$container-padding: 3rem;
 
-h1, .h1 {
-  font-weight: bold;
-  font-size: 1.625rem;
-  line-height: 2rem;
-  padding: 0;
-  margin: 2rem 0 1rem;
-
-  // Desktop sizing done as SCSS mixin to allow for toggled sizing on any screen
-  // if using in apps use as @media #{$screen-width-medium} { … }
-  @mixin desktop {
-    font-size: 2.25rem;
-    line-height: 3rem;
-    margin: 3rem 0 1rem;
-  }
-
-  &:not(.mobile) {
-    @media #{$screen-width-medium} {
-      @include desktop;
-    }
-  }
-
-  &.desktop { @include desktop; }
+.container {
+  width: 100%;
+  max-width: $xlarge-width + ($container-padding * 2); // add in padding to account for it in width of container.
+  margin: 0 auto;
+  padding: 0 $container-padding / 2;
+  @media #{$screen-width-medium} { padding: 0 $container-padding; }
 }
 
-h2, .h2 {
-  font-weight: bold;
-  font-size: 1.5rem;
-  line-height: 1.875rem;
-  padding: 0;
-  margin: 1.875rem 0 1rem;
-
-  // Desktop sizing done as SCSS mixin to allow for toggled sizing on any screen
-  // if using in apps use as @media #{$screen-width-medium} { … }
-  @mixin desktop {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-    margin: 2.25rem 0 1rem;
-  }
-
-  &:not(.mobile) {
-    @media #{$screen-width-medium} {
-      @include desktop;
-    }
-  }
-
-  &.desktop { @include desktop; }
-}
-
-h3, .h3 {
-  font-weight: bold;
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-  padding: 0;
-  margin: 1.75rem 0 1rem;
-
-  // Desktop sizing done as SCSS mixin to allow for toggled sizing on any screen
-  // if using in apps use as @media #{$screen-width-medium} { … }
-  @mixin desktop {
-    font-size: 1.5rem;
-    line-height: 1.875rem;
-    margin: 1.875rem 0 1rem;
-  }
-
-  &:not(.mobile) {
-    @media #{$screen-width-medium} {
-      @include desktop;
-    }
-  }
-
-  &.desktop { @include desktop; }
-}
-
-h4, .h4 {
-  font-weight: bold;
-  font-size: 1.125rem;
-  line-height: 1.5rem;
-  padding: 0;
-  margin: 1.5rem 0 1rem;
-
-  // Desktop sizing done as SCSS mixin to allow for toggled sizing on any screen
-  // if using in apps use as @media #{$screen-width-medium} { … }
-  @mixin desktop {
-    font-size: 1.25rem;
-    line-height: 1.625rem;
-    margin: 1.625rem 0 1rem;
-  }
-
-  &:not(.mobile) {
-    @media #{$screen-width-medium} {
-      @include desktop;
-    }
-  }
-
-  &.desktop { @include desktop; }
-}
-
-h5, .h5 {
-  font-weight: bold;
-  font-size: 1rem;
-  line-height: 1.25rem;
-  padding: 0;
-  margin: 1.25rem 0 1rem;
-
-  // Desktop sizing done as SCSS mixin to allow for toggled sizing on any screen
-  // if using in apps use as @media #{$screen-width-medium} { … }
-  @mixin desktop {
-    font-size: 1.125rem;
-    line-height: 1.5rem;
-    margin: 1.5rem 0 1rem;
-  }
-
-  &:not(.mobile) {
-    @media #{$screen-width-medium} {
-      @include desktop;
-    }
-  }
-
-  &.desktop { @include desktop; }
+nav ul ul {
+  margin-top: 0.25rem;
+  margin-left: 1rem;
+  list-style-type: circle;
 }
 
 pre {
@@ -142,6 +36,34 @@ pre {
       background: $amethyst-50;
       color: $amethyst-700;
       border-color: $amethyst-300;
+    }
+  }
+}
+
+.toggle {
+  display: inline-block;
+  padding: 0;
+  color: $jade-500;
+  border: 1px solid $jade-500;
+  background: transparent;
+  border-radius: 1rem;
+  text-decoration: none;
+  line-height: 1.5rem;
+  cursor: pointer;
+
+  span {
+    padding: 0 0.5rem;
+    border-radius: 1rem;
+    display: inline-block;
+
+    &:first-child:not([data-active="true"]) { padding-right: 0.25rem; }
+
+    &:last-child:not([data-active="true"]) { padding-left: 0.25rem; }
+
+    &[data-active="true"] {
+      background: $jade-500;
+      color: $white;
+      padding: 0 0.5rem;
     }
   }
 }
