--- a/src/styles/peak/theme/assante.scss
+++ b/src/styles/peak/theme/assante.scss
@@ -47,6 +47,7 @@ $pearl-900: #37373f;
 /// ---- Colour Mapping ---- //
 // ------------------------- //
 
+$primary: $blue-300;
 $primary-50: $blue-50;
 $primary-100: $blue-100;
 $primary-300: $blue-300;
@@ -54,15 +55,17 @@ $primary-500: $blue-500;
 $primary-700: $blue-700;
 $primary-900: $blue-900;
 
+$secondary: $teal-300;
 $secondary-50: $teal-50;
 $secondary-100: $teal-100;
 $secondary-300: $teal-300;
 $secondary-500: $teal-500;
 $secondary-700: $teal-700;
 
-$tertiary-50: $yellow-50;
-$tertiary-100: $yellow-100;
-$tertiary-300: $yellow-300;
+$tertiary: $yellow-100;
+$tertiary-50: #f7f2b8;
+$tertiary-100: #f4e300;
+$tertiary-300: #e6c605;
 
 $bg-50: $sky-50;
 $bg-100: $sky-100;
