--- a/src/styles/peak/theme/wealthbar.scss
+++ b/src/styles/peak/theme/wealthbar.scss
@@ -32,7 +32,7 @@ $emerald-500: #0a884e;
 $emerald-700: #086749;
 
 // Neutrals
-$pearl-0: #fff;
+$pearl-0: #ffffff;
 $pearl-50: #f7f7f8;
 $pearl-100: #e4e4ea;
 $pearl-300: #d0d0d9;
@@ -43,6 +43,7 @@ $pearl-900: #37373f;
 /// ---- Colour Mapping ---- //
 // ------------------------- //
 
+$primary: $jade-300;
 $primary-50: $jade-50;
 $primary-100: $jade-100;
 $primary-300: $jade-300;
@@ -50,12 +51,14 @@ $primary-500: $jade-500;
 $primary-700: $jade-700;
 $primary-900: $jade-900;
 
+$secondary: $amethyst-300;
 $secondary-50: $amethyst-50;
 $secondary-100: $amethyst-100;
 $secondary-300: $amethyst-300;
 $secondary-500: $amethyst-500;
 $secondary-700: $amethyst-700;
 
+$tertiary: $amber-100;
 $tertiary-50: $amber-50;
 $tertiary-100: $amber-100;
 $tertiary-300: $amber-300;
@@ -69,15 +72,16 @@ $neg-300: $ruby-300;
 $neg-500: $ruby-500;
 $neg-700: $ruby-700;
 
-$alert-50: $amber-50;
-$alert-100: $amber-100;
-$alert-300: $amber-300;
-
 $pos: $emerald-500;
 $pos-50: $emerald-50;
 $pos-300: $emerald-300;
 $pos-500: $emerald-500;
 $pos-700: $emerald-700;
+
+$alert: $amber-100;
+$alert-50: $amber-50;
+$alert-100: $amber-100;
+$alert-300: $amber-300;
 
 $white: $pearl-0;
 $neutral-0: $pearl-0;
