--- a/src/styles/peak-states.scss
+++ b/src/styles/peak-states.scss
@@ -14,11 +14,16 @@ nav ul ul {
   list-style-type: circle;
 }
 
-p code {
+p code,
+li code,
+td code {
   background: $primary-50;
   color: $primary-500;
+  &.alt {
+    background: $secondary-50;
+    color: $secondary-700;
+  }
 }
-
 pre {
   white-space: normal;
   word-wrap: normal;
@@ -32,12 +37,17 @@ pre {
     word-wrap: break-word;
     display: block;
     padding: 0.75rem;
-    background: $primary-50;
-    color: $primary-500;
+    background: $neutral-50;
+    color: $neutral-700;
     border-radius: 0.25rem;
-    border: 1px solid $primary-100;
+    border: 1px solid $neutral-300;
 
     &.css {
+      background: $primary-50;
+      color: $primary-700;
+      border-color: $primary-300;
+    }
+    &.css.px {
       background: $secondary-50;
       color: $secondary-700;
       border-color: $secondary-300;
