--- a/src/styles/peak-states.scss
+++ b/src/styles/peak-states.scss
@@ -1,13 +1,3 @@
-// $container-padding: 3rem;
-
-// .container {
-//   width: 100%;
-//   max-width: $xlarge-width + ($container-padding * 2); // add in padding to account for it in width of container.
-//   margin: 0 auto;
-//   padding: 0 $container-padding / 2;
-//   @media #{$screen-width-medium} { padding: 0 $container-padding; }
-// }
-
 @import 'containers';
 
 .page { margin-bottom: 2rem; }
@@ -28,6 +18,7 @@ td code {
     color: $secondary-700;
   }
 }
+
 pre {
   white-space: normal;
   word-wrap: normal;
@@ -41,21 +32,40 @@ pre {
     word-wrap: break-word;
     display: block;
     padding: 0.75rem;
-    background: $neutral-50;
-    color: $neutral-700;
+    background: $neutral-900;
+    color: $neutral-300;
     border-radius: 0.25rem;
-    border: 1px solid $neutral-300;
+  }
+}
 
-    &.css {
-      background: $primary-50;
-      color: $primary-700;
-      border-color: $primary-300;
-    }
-    &.css.px {
-      background: $secondary-50;
-      color: $secondary-700;
-      border-color: $secondary-300;
-    }
+// PrismJS colours
+code.language-css {
+  background: $neutral-900;
+  color: $neutral-300;
+  .token.attr-name, .token.deleted, .token.namespace, .token.tag, .token.selector, .token.boolean, .token.function, .token.number  {
+    color: $secondary-300;
+  }
+  .token.class-name, .token.constant, .token.property, .token.symbol, .token.attr-value, .token.char, .token.regex, .token.string, .token.variable {
+    color: $secondary-100;
+  }
+  .token.punctuation {
+    color: $secondary-50;
+  }
+}
+code.language-html, code.language-svg {
+  background: $neutral-900;
+  color: $neutral-300;
+  .token.deleted .token.namespace, .token.tag, .token.selector {
+    color: $primary-100;
+  }
+  .token.attr-name, .token.class-name, .token.constant, .token.property, .token.symbol {
+    color: $primary-300;
+  }
+  .token.punctuation, .token.boolean, .token.function, .token.number {
+    color: $primary-100;
+  }
+  .token.attr-value, .token.char, .token.regex, .token.string, .token.variable {
+    color: $primary-50;
   }
 }
 
