--- a/src/styles/peak-states.scss
+++ b/src/styles/peak-states.scss
@@ -86,6 +86,7 @@ code.language-html, code.language-svg {
   border-radius: 1rem;
   text-decoration: none;
   line-height: 1.5rem;
+  margin: 0 0 1.25rem;
   cursor: pointer;
   &.inline-label {
     @media #{$screen-width-medium} {
