--- a/src/styles/peak-states.scss
+++ b/src/styles/peak-states.scss
@@ -10,7 +10,8 @@ nav ul ul {
 
 p code,
 li code,
-td code {
+td code,
+label code {
   background: $primary-50;
   color: $primary-500;
   &.alt {
@@ -34,7 +35,7 @@ pre {
     word-break: break-word;
     word-wrap: normal;
     display: block;
-    padding: 0.75rem;
+    padding: 0 1.5rem 0;
     margin: 0 0 1.25rem;
     background: $neutral-900;
     color: $neutral-300;
