cleanup prism on type and SVG pages
- update button page with prism

--- a/src/styles/peak-states.scss
+++ b/src/styles/peak-states.scss
@@ -29,13 +29,14 @@ pre {
   padding: 0;
 
   code {
+    width: 100%;
     white-space: pre;
     white-space: pre-wrap;
     word-spacing: normal;
     word-break: break-word;
     word-wrap: normal;
     display: block;
-    padding: 0 1.5rem 0;
+    padding: 1rem 1.5rem;
     margin: 0 0 1.25rem;
     background: $neutral-900;
     color: $neutral-300;
@@ -61,7 +62,7 @@ code.language-css {
     color: $secondary-50;
   }
 }
-code.language-html, code.language-svg {
+code.language-markup, code.language-svg {
   background: $neutral-900;
   color: $neutral-300;
   .token.deleted .token.namespace, .token.tag, .token.selector {
