updates to typography section for easier digestion

--- a/src/styles/prism.scss
+++ b/src/styles/prism.scss
@@ -3,7 +3,7 @@ pre[class*="language-"] {
 	color: $neutral-300;
 	text-align: left;
 	white-space: pre;
-  white-space: pre-wrap;
+  white-space: unset;
 	word-spacing: normal;
 	word-break: break-word;
 	word-wrap: normal;
@@ -18,12 +18,15 @@ pre[class*="language-"] {
 	hyphens: none;
 }
 
+// pre[class*="language-"]
+
 /* Code blocks */
 pre[class*="language-"] {
 	padding: 1rem 1.5rem;
   margin: 0 0 1.25rem;
 	overflow: auto;
 	border-radius: 0.25em;
+	> code { white-space: pre; }
 }
 
 :not(pre) > code[class*="language-"],
