--- a/src/styles/peak-states.scss
+++ b/src/styles/peak-states.scss
@@ -6,17 +6,17 @@ nav ul ul {
   list-style-type: circle;
 }
 
-p code,
-li code,
-td code,
-label code {
-  background: $primary-50;
-  color: $primary-500;
-  &.alt {
-    background: $secondary-50;
-    color: $secondary-700;
-  }
-}
+// p code,
+// li code,
+// td code,
+// label code {
+//   background: $neutral-900;
+//   color: $primary-300;
+//   &.alt {
+//     background: $neutral-900;
+//     color: $secondary-500;
+//   }
+// }
 
 // PrismJS colours
 @import 'prism.scss';
@@ -30,7 +30,6 @@ label code {
   border-radius: 1rem;
   text-decoration: none;
   line-height: 1.5rem;
-  margin: 0 0 1.25rem;
   cursor: pointer;
   &.inline-label {
     @media #{$screen-width-medium} {
