--- a/src/styles/prism.scss
+++ b/src/styles/prism.scss
@@ -1,3 +1,16 @@
+/* Inline code */
+// :not(pre) > code {
+// 	padding: 0.125em;
+// 	border-radius: 0.25em;
+// 	white-space: normal;
+// 	background: $primary-50;
+//   color: $primary-700;
+//   &.alt {
+//     background: $secondary-50;
+//     color: $secondary-700;
+//   }
+// }
+
 code[class*="language-"],
 pre[class*="language-"] {
 	color: $neutral-100;
@@ -33,19 +46,6 @@ pre[class*="language-"] {
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
 	background: $neutral-900;
-}
-
-/* Inline code */
-:not(pre) > code {
-	padding: 0.125em;
-	border-radius: 0.25em;
-	white-space: normal;
-	background: $primary-50;
-  color: $primary-700;
-  &.alt {
-    background: $secondary-50;
-    color: $secondary-700;
-  }
 }
 
 .token.comment,
